k8s/bc/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bc-virtual-service
  namespace: istio-ingress
spec:
  hosts:
    - "*.bc.iidi.alpha.phac.gc.ca"
  gateways:
    - istio-ingress/mesh-gateway
  http:
    # Route for patient-browser
    - match:
        - headers:
            ":authority":
              exact: "patient-browser.bc.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: patient-browser-svc.bc.svc.cluster.local
            port:
              number: 8079

    # Route for fhir
    - match:
        - headers:
            ":authority":
              exact: "fhir.bc.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: hapi-fhir-svc.bc.svc.cluster.local
            port:
              number: 8080

    # Route for aggregator
    - match:
        - headers:
            ":authority":
              exact: "aggregator.bc.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: aggregator-svc.bc.svc.cluster.local
            port:
              number: 80

    # Route for transfer-outbound
    - match:
        - headers:
            ":authority":
              exact: "transfer-outbound.bc.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: transfer-outbound-svc.bc.svc.cluster.local
            port:
              number: 3000
